ui.frontend/src/main/webpack/etisalat/styles/hero_banner.scss
.basicpage .container,
.basicpage .container-fluid,
.basicpage .container-lg,
.basicpage .container-md,
.basicpage .container-sm,
.basicpage .container-xl,
.basicpage .container-xxl {
  margin: $margin-step-0;
  width: 100%;
  padding: $padding-step-0;
}

.main-carousel {
  .cmp-carousel {
    &__actions {
      display: none;
      @include respond-to-min($desktop){
        display: block;
      }
    }
    &__action {
      display: none;
      @include respond-to-min($desktop) {
        &--next,
        &--previous {
          width: 3rem;
          height: 3rem;
          align-items: center;
          justify-content: center;
          border-radius: 50%;
          border-color: none;
          background: rgba(0, 0, 0, 0.42);
          margin: $margin-step-0;
          transform: translateY(-50%);
          z-index: 2;
          border: none;
          top: 50%;
          position: absolute;
          cursor: pointer;
          display: flex;
          &:after {
            content: "";
            position: absolute;
            top: 0.938rem;
            z-index: 11;
            display: block;
            width: 0.688rem;
            height: 0.688rem;
            border-top: 1px solid $white;
            border-left: 1px solid $white;
          }
        }
        &--previous {
          right: auto;
          left: 2.7rem;
          &:after {
            left: 1.25rem;
            top: auto;
            transform: rotate(-45deg);
          }
        }
        &--next {
          right: 2.7rem;
          &:after {
            left: 1.063rem;
            top: auto;
            transform: rotate(135deg);
          }
        }
        &-text {
          display: none;
        }
      }
    }
    &__indicators {
      left: 22%;
      top: 40%;
      position: absolute;
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
      margin: $margin-step-0;
      padding: $padding-step-0;
      list-style: none;
      z-index: 11;
      @include respond-to-min($tablet) {
        left: 37%;
      }
      @include respond-to-min($desktop) {
        display: none;
      }
    }
    &__indicator {
      background-color: $light-white-grey;
      width: 0.5rem;
      height: 0.5rem;
      &--active {
        background-color: $arrow-border-green;
      }
    }
  }
  .video {
    min-height: 34.375rem;
    @include respond-to-min($desktop) {
      height: 100%;
      min-height: 34.375rem;
    }
    .video_link {
      @include respond-to-min($desktop) {
        position: absolute;
        left: 0.625rem;
        color: $white;
      }
      @include respond-to-max($desktop) {
        color: $main-green;
      }
    }
    .cover-image__with-play-icon {
      @include respond-to-min($desktop) {
        margin-left: -0.75rem;
        margin-right: -0.75rem;
      }
    }
    .video-wrapper {
      @include respond-to-min($desktop) {
        top: 4.063rem;
        left: 0.188rem;
      }
      @include respond-to-max($phone) {
        margin-bottom: $margin-step-0;
        margin-top: 0.5rem;
      }
    }
    .video_cover {
      @include respond-to-min($desktop) {
        height: 31.25rem;
        position: absolute;
        left: -9999px;
        right: -9999px;
        top: -9999px;
        bottom: -9999px;
        margin: auto;
        min-width: 100%;
        min-height: 100%;
        max-width: unset;
      }
    }
    .video_ctn {
      @include respond-to-max($phone){
        background: $white-grey;
        padding: calc(#{$padding-step-5} + 10px) $padding-step-0;
      }
      @include respond-to-min($tablet) {
        max-height: 15.625rem;
        top: 0;
        left: 0;
        z-index: 1;
        overflow: hidden;
      }
      @include respond-to-min($desktop) {
        max-height: 31.25rem;
        height: 31.25rem;
      }
    }
    .youtube-popup-container {
      top: 15.625rem;
      left: 1.563rem;
      @include respond-to-min($desktop) {
        position: absolute;
        top: 0;
        right: 0;
        margin: $margin-step-0 auto;
        width: 1224px;
      }
      @include respond-to-min($desktop-wide) {
        top: 0;
        left: 0;
      }
      .btn-green{
        margin-top: 1.875rem;
        top: 10rem;
        width: 21.8rem;
        @include respond-to-min($tablet) {
          margin-top: 1.5rem;
        }
        @include respond-to-min($desktop){
          left: 1.125rem;
          top: 21rem;
          width: 11.25rem;
          margin-top: $margin-step-0;
        }
      }
      .hero-heading-big {
        margin-top: 0.938rem;
        @include respond-to-min($desktop) {
          left: 0.813rem;
          top: 3.75rem;
          margin-top: 2.5rem;
        }
        @include respond-to-max($desktop) {
          top: 1.563rem;
          .text--white {
            color: $almost-black;
            @include respond-to-min($desktop) {
              color: $white;
            }
          }
        }
      }
    }
  }
  .replaced-svg,
  a.video_link svg {
    @include respond-to-min($desktop){
      top: 0.188rem;
      left: 0.375rem;
      position: relative;
    }
    g g {
      @include respond-to-max($desktop) {
        stroke: $main-green !important;
      }
      @include respond-to-min($tablet) {
        stroke: $white;
        position: absolute;
        right: -2rem;
        top: -0.188rem;
      }
    }
    polygon {
      @include respond-to-max($desktop) {
        stroke: $main-green !important;
      }
      @include respond-to-min($tablet) {
        stroke: $white;
      }
    }
  }
}
.hero-banner-section {
  position: relative;
  max-height: 31.25rem;
  overflow: hidden;
  h2 {
    text-align: center;
    a {
      font-size: $font32;
      letter-spacing: normal;
      color: $white;
      margin-bottom: 0.75rem;
    }
  }
  p {
    text-align: left;
    font-size: $font16;
    line-height: 22px;
    @include font-family-lato();
    letter-spacing: normal;
    color: $black;
    margin: $margin-step-0 $margin-step-0 calc(#{$margin-step-2} - 3.5px) $margin-step-0;
    @include respond-to-min($desktop) {
      font-size: $font18;
      color: $white;
    }
    a {
      font-size: $font16;
      @include respond-to-min($desktop) {
        font-size: $font18;
      }
    }
  }
  .cmp-teaser {
    &__image {
      height: 100%;
      width: 100%;
      @include respond-to-max($tablet) {
        height: 100%;
      }
    }
    &__description {
      @include respond-to-min($desktop) {
        width: 50%;
        p {
          top: 0.313rem;
          position: relative;
          &:first-child {
            line-height: 1.6;
          }
          @include respond-to-max($desktop) {
            color: $almost-black;
          }
        }
        a {
          color: $lemon-green;
        }
      }
    }
    &__content {
      position: relative;
      top: 3.75rem;
      padding-left: calc(#{$padding-step-1} + 2px);
      width: 100%;
      left: 0;
      margin: auto;
      right: 0;
      width: 1224px;
      display: flex;
      justify-content: center;
      flex-direction: column;
      height: 100%;
      align-items: flex-start;
      position: absolute;
      z-index: 1;
      padding-right: calc(#{$padding-step-1} + 4px);
      @include respond-to-max($tablet) {
        font-size: $font26;
        line-height: 33px;
        z-index: 2;
      }
      @include respond-to-min($desktop) {
        width: 50%;
        margin: $margin-step-0;
      }
      @include respond-to-max($desktop) {
        font-size: $font26;
        line-height: 33px;
        position: relative;
        top: 0;
        left: 0;
        width: 100%;
        z-index: 2;
      }
      @include respond-to-min($desktop-wide) {
        width: 1224px;
        margin: auto;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
      }
    }
    &__pretitle {
      font-size: $font14;
      font-weight: 700;
      line-height: 20px;
      letter-spacing: 0.4px;
      color: $white;
      padding: calc(#{$padding-step-1} - 2px) calc(#{$padding-step-1} + 4px);
      border-radius: 100px;
      display: flex;
      max-width: 21rem;
      margin-bottom: 0.75rem;
      background-image: linear-gradient(83deg, $bright-sun, $pumpkin);
      @include respond-to-min($tablet) {
        margin-bottom: 1rem;
      }
      @include respond-to-min($desktop) {
        font-size: $font16;
        line-height: 24px;
        max-width: 26.625rem;
      }
    }
    &__action-container {
      position: relative;
      margin-bottom: $margin-step-0;
      width: 100%;
      @include respond-to-min($tablet) {
        margin-top: $margin-step-3;
      }
      @include respond-to-max($desktop) {
        width: 97%;
      }
      a {
        min-width: 11.25rem;
        width: 100%;
        height: 3rem;
        font-size: $font14;
        @include font-family-lato();
        line-height: 48px;
        letter-spacing: 0.14285714em;
        display: inline-block;
        text-transform: uppercase;
        transition: all 0.3s ease-in-out;
        text-align: center;
        padding: 0.1rem;
        border-radius: 4px;
        border-width: 1px;
        outline: 0;
        font-weight: 700;
        color: $white;
        background-color: $arrow-border-green;
        border-color: $arrow-border-green;
        box-shadow: none !important;
        @include respond-to-min($desktop){
          width: auto;
        }
        &:hover {
          box-shadow: none !important;
          color: $white;
          background-color: $green-btn;
          border-color: $green-btn;
        }
      }
    }
    &__title {
      @include respond-to-min($desktop) {
        color: $white;
        margin: $margin-step-0 $margin-step-0 12.5px $margin-step-0;
        font-size: $font54;
        line-height: 64px;
        a {
          color: $white;
        }
      }
      &-link {
        color: $white;
        @include respond-to-max($desktop) {
          color: $main-green;
        }
      }
      @include respond-to-min($desktop-wide) {
        width: 50%;
      }
      @include respond-to-max($desktop) {
        a {
          color: $almost-black;
        }
      }
    }
  }
  .cmp-image__image {
    z-index: 1;
    width: 100%;
    height: 100% !important;

    @include respond-to-min($desktop) {
      height: auto;
    }
  }
}
.main-carousel .container__panal_height {
  height: auto;
  .hero-banner-section {
    @include respond-to-min($desktop) {
      height: 500px;
      position: relative;
      max-height: 31.25rem;
      overflow: hidden;
      .cmp-teaser {
        &__content {
          width: 100%;
          margin-left: $margin-step-0;
        }
        &__title {
          width: 97%;
          margin: $margin-step-0;
          font-size: $font54;
          line-height: 64px;
        }
        &__action-container {
          margin-bottom: $margin-step-7;
          margin-top: calc(#{$margin-step-6} - 2px);
        }
        @include respond-to-min($desktop-wide) {
          &__content {
            width: 100%;
            margin-left: $margin-step-0;
          }
        }
      }
    }
  }
  @include respond-to-max($tablet) {
    .aem-Grid.aem-Grid--default--12
      > .aem-GridColumn.aem-GridColumn--offset--default--6 {
      margin-left: $margin-step-0;
      width: 100%;
    }
  }
}

#prepaid_container_id {
  .hero-banner-section .cmp-image__image {
    height: 363px !important;
  }
}

